tests/build/cases/widget/module_path_is_invalid.stderr
error[E0433]: failed to resolve: could not find `not` in the crate root
 --> cases/widget/module_path_is_invalid.rs:3:18
  |
3 | #[widget($crate::not::a::valid::path)]
  |                  ^^^ could not find `not` in the crate root
  |
  = note: this error originates in the macro `__test_widget_assert_mod_path_u516` (in Nightly builds, run with -Z macro-backtrace for more info)
